<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/top_bar"
        layout="@layout/view_top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/content_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toTopOf="@id/btn_log_meal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/summary_padding_horizontal"
            android:paddingEnd="@dimen/summary_padding_horizontal"
            android:paddingTop="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_large">

            <!-- Eyebrow + Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_ai_complete"
                android:textSize="@dimen/text_caption"
                android:fontFamily="@font/inter"
                android:textFontWeight="500"
                android:letterSpacing="0.1"
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:layout_marginTop="@dimen/spacing_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_dose_ready"
                android:textSize="@dimen/text_h1"
                android:fontFamily="@font/inter"
                android:textFontWeight="700"
                android:textColor="@color/text_primary"
                android:letterSpacing="-0.02"
                android:layout_marginTop="@dimen/spacing_xs"
                android:layout_marginBottom="@dimen/spacing_medium" />

            <include layout="@layout/section_summary_photo" />

            <include layout="@layout/section_summary_stats" />

            <include layout="@layout/section_summary_dose_breakdown" />

            <include layout="@layout/section_summary_food_items" />

            <include layout="@layout/section_summary_glucose" />

            <include layout="@layout/section_summary_analysis" />

            <include layout="@layout/section_summary_footer" />

        </LinearLayout>

    </ScrollView>

    <!-- Confirm button -->
    <Button
        android:id="@+id/btn_log_meal"
        style="@style/ButtonStyle.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/summary_confirm_button_height"
        android:layout_marginStart="@dimen/summary_padding_horizontal"
        android:layout_marginEnd="@dimen/summary_padding_horizontal"
        android:layout_marginBottom="@dimen/padding_input_horizontal"
        android:text="@string/summary_confirm_save"
        android:textSize="@dimen/text_body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="content_scroll_view,btn_log_meal" />

</androidx.constraintlayout.widget.ConstraintLayout>